# minSH

./: .gitignore  CITATION.cff  README.md  astar.py  astar_bench.py  bench.py  compare_algs.py  draw_astar.py  profile_tests.py  pyproject.toml  test.py  test_astar.py  utils.py
data/: small_A.fa  small_B.fa
minsh/: astar.py  utils.py
scripts/: bench.py  compare.py  generate.py  render.ipynb  test.py
